--- a/Note Project/style.css
+++ b/Note Project/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: #f4f7f8;
+    background-color: #effafd;
     font-family: "Poppins", "sans-serif";
     display: flex;
     flex-wrap: wrap;
@@ -15,7 +15,7 @@ body{
 .heading{
     width: 100vw;
     height: 5.5rem;
-    background-color: #f1c40f;
+    background-color: #fcd53d;
     color: #282936;
     box-shadow: 0px 10px 16px rgb(248, 247, 247);
 }
@@ -66,7 +66,7 @@ button.learn-more .circle{
     display: block;
     margin: 0;
     width: 3rem;
-    background: #f1c12e;
+    background: #fcd53d;
     height: 3rem;
     border-radius: 1.625rem;
 }
@@ -133,10 +133,10 @@ button:hover .button-text{
 .note{
     background-color: #fff;
     margin: 30px 20px;
-    height: 200px;
+    height: 230px;
     width: 400px;
     overflow-y: scroll;
-    margin-top: 7rem;
+    margin-top: 4rem;
     box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
     inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
@@ -144,7 +144,7 @@ button:hover .button-text{
 .note .tools{
     display: flex;
     justify-content: flex-end;
-    padding: 00.5rem;
+    padding: 0.5rem;
 }
 
 .note .tools button{
@@ -162,8 +162,8 @@ button:hover .button-text{
     font-size: 1.2rem;
     border: none;
     width: 100%;
-    height: 300px;
-    padding: 20px;
+    height: 400px;
+    padding:20px;
 }
 
 .note .operation{
